96
Here is another example, originally in bug SI-242.
{code}
   def f = 
<console>:1: error: illegal start of simple expression
       def f = 
               ^
{code}

In general, the issue is that sometimes syntaxError is being called instead of incompleteInputError.  The "semicolon seen" business is the best clue that has surfaced so far about why that might be happening.
